--- a/style.css
+++ b/style.css
@@ -629,6 +629,10 @@ a.lien_Hebergements_pop {
 		height: 40px;
 		width: 40px;
 	}
+	.button_filter {
+		padding-right: 45px;
+	}
+
 	/*global hebergements*/
 
 	.global_position_activity {
@@ -642,7 +646,7 @@ a.lien_Hebergements_pop {
 	}
 
 	/*populaire*/
-	
+
 	.img_blanc {
 		height: 320px;
 	}
@@ -760,9 +764,8 @@ a.lien_Hebergements_pop {
 	.display_filtre {
 		margin-top: 20px;
 	}
-	.button_filter
-	{
-		padding: unset;
+	.button_filter {
+		padding-right: unset;
 	}
 	/*les plus populaires*/
 
